kube/service.yaml
# Headless service for StatefulSet
apiVersion: v1
kind: Service
metadata:
  name: mongo
  labels:
    name: mongo
spec:
  selector:
    name: mongo
  clusterIP: None
  ports:
  - port: 27017
    name: mongo
