kube/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mongo
spec:
  podSelector:
    matchLabels:
      name: mongo
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          name: mongo
    ports:
    - protocol: TCP
      port: 27017
